--- a/package.json
+++ b/package.json
@@ -7,12 +7,32 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint --ext .jsx --ext .js src/",
+    "lint": "eslint src/",
     "format": "prettier --check ./src"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.11.0",
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/bottom-tabs": "^5.7.1",
+    "@react-navigation/native": "^5.7.0",
+    "@react-navigation/stack": "^5.7.0",
+    "axios": "^0.19.2",
+    "babel-plugin-dotenv-import": "^2.1.0",
+    "jwt-decode": "^2.2.0",
+    "moment": "^2.27.0",
+    "node-sass": "^4.14.1",
     "react": "16.13.1",
-    "react-native": "0.63.1"
+    "react-native": "0.63.1",
+    "react-native-gesture-handler": "^1.6.1",
+    "react-native-reanimated": "^1.9.0",
+    "react-native-safe-area-context": "^3.1.1",
+    "react-native-screens": "^2.9.0",
+    "react-redux": "^7.2.0",
+    "react-router-dom": "^5.2.0",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "redux-promise-middleware": "^6.1.2"
   },
   "devDependencies": {
     "@babel/core": "7.10.5",
@@ -22,6 +42,8 @@
     "@typescript-eslint/parser": "^3.6.1",
     "babel-jest": "25.5.1",
     "eslint": "^6.8.0",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-import-resolver-node": "^0.3.4",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "^4.0.8",
