--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   "devDependencies": {
     "@babel/core": "7.10.5",
     "@babel/runtime": "7.10.5",
+    "@bam.tech/react-native-make": "^3.0.0",
     "@react-native-community/eslint-config": "1.1.0",
     "@typescript-eslint/eslint-plugin": "^3.6.1",
     "@typescript-eslint/parser": "^3.6.1",
@@ -66,6 +67,7 @@
     "lint-staged": "^10.2.11",
     "metro-react-native-babel-preset": "0.59.0",
     "prettier": "^2.0.5",
+    "react-native-splash-screen": "^3.2.0",
     "react-test-renderer": "16.13.1"
   },
   "jest": {
